[package]
name = "slablit"
description = "Literal for slab creation"
version = "0.3.0"
authors = [
    "Tau <git@tau.garden>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
license = "MIT/Apache-2.0"
readme = "readme.md"
repository = "https://github.com/myelin-ai/slablit"
homepage = "https://github.com/myelin-ai/slablit"
documentation = "https://docs.rs/slablit"
edition = "2018"

[dependencies]
slab = "0.4"
