[package]
name = "slablit"
description = "Literal for slab creation"
version = "0.3.0"
authors = [
    "Tau Gärtli <git@tau.garden>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
license = "MIT/Apache-2.0"
readme = "readme.md"
repository = "https://github.com/myelin-ai/slablit"
homepage = "https://github.com/myelin-ai/slablit"
documentation = "https://docs.rs/slablit"
edition = "2021"

[badges.maintenance]
status = "passively-maintained"

[dependencies]
slab = "0.4"
