[package]
name = "slablit"
description = "Literal for slab creation"
version = "0.3.1"
authors = [
    "Tau Gärtli <git@tau.garden>",
    "Jeremy Stucki <jeremy@myelin.ch>",
]
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/myelin-ai/slablit"
documentation = "https://docs.rs/slablit"
edition = "2021"
exclude = [".github", ".mailmap", ".gitignore"]
categories = ["data-structures"]
keywords = ["literal", "slab", "macro"]

[badges.maintenance]
status = "passively-maintained"

[dependencies]
slab = "0.4"
